更新CHANGELOG、README 增加技術支援

--- a/README
+++ b/README
@@ -1,102 +1,309 @@
 # UserChat Daily Unique Users Counter
 
-這是一個 Chrome/Edge (Manifest V3) 擴充功能。當你開啟 MIS Bot 平台的查詢頁面時，會在頁面右下角顯示統計面板，計算每日唯一使用人數（同一 user 在同一天內對同一 GPT 使用 1~N 次均只算 1）。
+這是一個專業的 Chrome/Edge (Manifest V3) 擴充功能，整合外部 LLM 服務進行智能分析。當你開啟 MIS Bot 平台的查詢頁面時，會在頁面右下角顯示統計面板，提供全面的用戶使用分析與 GPT 回答品質評估。
 
-支援：
-- 當頁快速統計
-- 透過分頁導覽列抓取同條件的所有頁次，進行聚合
-- 匯出 CSV
-- **KPI 摘要功能** - 顯示週間關鍵績效指標
+## 🚀 核心功能
 
-## 安裝與使用
-1. 打開瀏覽器 chrome://extensions 或 edge://extensions。
-2. 開啟「開發人員模式」。
-3. 點「載入未封裝項目」，選擇本資料夾 `extension`。
-4. 進入目標頁面（URL 以 `https://misbot-beta.mitac.com.tw/pms/platformAnalysis/UserChat` 開頭）。
-5. 右下角面板會自動出現：
-   - 「聚合全部頁」：透過分頁列把所有頁面的資料抓回來統計。
-   - 「匯出 CSV」：將統計結果下載為 CSV。
-   - 「KPI摘要」：切換至 KPI 摘要視圖。
+### 📊 統計分析
+- **每日唯一使用人數統計**：同一用戶在同一天內的多次使用僅計算一次
+- **跨頁面數據聚合**：透過分頁導覽列抓取所有頁面數據進行統計
+- **24小時使用時段分佈**：分析用戶使用習慣與高峰時段
+- **週間 KPI 摘要**：自動計算週一至週五的關鍵績效指標
 
-## KPI 摘要功能
+### 🧠 AI 品質評估
+- **外部 LLM 整合**：串接專業 AI 稽核服務評估 GPT 回答品質
+- **智能問答配對**：自動配對用戶問題與對應的 GPT 回答
+- **四級解決狀態**：是（完全解決）/ 部分（部分解決）/ 否（未解決）/ 未知（無法判斷）
+- **精確正確率**：0-100% 數值化評估回答準確度
 
-點擊「KPI摘要」按鈕可以查看以下關鍵績效指標：
+### 💾 數據匯出
+- **完整 CSV 匯出**：包含 KPI 摘要、每日統計、時段分析、詳細 log 四大表格
+- **PM 專用範本**：針對項目管理需求的專門匯出格式
+- **自訂日期範圍**：支援指定時間範圍的數據分析
 
-| 指標 | 說明 |
-|------|------|
-| 週起/週終 | 當前週的起始和結束日期（週一至週五） |
-| 日活平均 DAU (avg) | 本週平均每日活躍用戶數 |
-| 週活 WAU | 本週活躍用戶總數（去重） |
-| 本週查詢總數 | 本週所有用戶查詢次數總計 |
-| 高峰時段 | 查詢量最高的小時時段 |
-| 高峰時段查詢數 | 高峰時段的查詢總數 |
-| 每用戶平均查詢 | 本週平均每位用戶的查詢次數 |
-| 解決率 | 查詢問題的解決比例（基於內容分析） |
-| 平均回答正確率 | 回答的平均準確度（基於內容分析） |
-| 平均解決嘗試次數 | 解決問題的平均嘗試次數（基於解決數量） |
-| 未解決數量 | 未能解決的查詢數量 |
-| 本週新用戶 | 首次使用平台的新用戶數 |
-| 本週回訪用戶 | 之前使用過平台的回訪用戶數 |
+### 🎨 使用者介面
+- **浮動面板設計**：右下角可拖拽移動的統計面板
+- **多表格切換**：四種不同視圖的智能切換
+- **響應式設計**：適配各種螢幕尺寸與解析度
+- **現代化 UI**：採用漸層色彩與動畫效果
 
-## 智能分析功能
+## 📋 安裝與使用
 
-### GPT回答品質自動評估
-系統會自動分析**GPT的回答內容**來判斷問題解決狀況和回答品質：
+### 安裝步驟
+1. 打開瀏覽器擴充功能管理頁面：
+   - Chrome: `chrome://extensions`
+   - Edge: `edge://extensions`
+2. 開啟右上角的「開發人員模式」開關
+3. 點擊「載入未封裝項目」按鈕
+4. 選擇本專案的 `extension` 資料夾
+5. 安裝完成後，擴充功能會出現在已安裝清單中
 
-#### 解決狀態判斷標準：
-- **是**：GPT提供了完整、詳細且**切題**的解答（包含文件引用、具體步驟、範例或完整流程說明）
-- **部分**：GPT提供了一般性回答，有一定幫助但可能不夠詳細或完整
-- **否**：GPT明確表示無法提供相關資訊、建議聯繫其他部門、純粹的道歉回應，或**答非所問**
-- **未知**：無GPT回應或回應內容無法判斷品質
+### 使用方法
+1. **進入目標頁面**：開啟 MIS Bot 查詢頁面
+   - URL 格式：`https://misbot-beta.mitac.com.tw/pms/platformAnalysis/UserChat*`
+2. **面板自動顯示**：右下角會自動出現統計面板
+3. **操作按鈕說明**：
+   - 🔵 **KPI摘要**：顯示週間關鍵績效指標
+   - 🔵 **每日統計**：顯示每日唯一使用人次表格
+   - 🔵 **時段分析**：顯示 24 小時使用分佈圖表
+   - 🔵 **詳細log**：顯示完整的使用記錄（含 AI 評估）
+   - 🟡 **聚合全頁**：跨所有頁面聚合數據
+   - 🟡 **匯出CSV**：下載完整統計報告
+   - 🔴 **✕**：關閉統計面板
 
-#### 回答正確率評估標準：
-- **95%**：完美回答（文件引用 + 結構化內容 + 詳細說明 + 有用關鍵詞 + **切題**）
-- **90%**：優秀回答（結構化內容或列表 + 詳細說明 + 文件引用 + **切題**）
-- **85%**：良好回答（有用關鍵詞 + 詳細說明 + 結構化內容或文件引用 + **切題**）
-- **75%**：一般回答（結構化內容或範例或具體資訊 + 詳細說明）
-- **70%**：基本回答（有用關鍵詞 + 詳細說明）
-- **60%**：簡單回答（僅有詳細說明，長度>100字）
-- **50%**：短回答（中等長度內容，50-100字）
-- **40%**：答非所問（詳細但與問題無關的回答）
-- **30%**：不足回答（無相關資訊、建議聯繫其他部門）
-- **20%**：無效回答（純道歉或完全無法提供幫助，且無實質內容）
+### 面板操作
+- **拖拽移動**：點擊面板標題區域可拖拽移動面板位置
+- **表格切換**：點擊任一表格按鈕切換不同視圖
+- **自動儲存**：面板位置與設定會自動保存
 
-### GPT回答品質關鍵詞分析
+## 📊 KPI 摘要功能
 
-#### 高品質回答指標：
-- **文件引用詞彙**：根據公司、根據文件、作業程序、FAQ.docx、根據.*文件
-- **結構性詞彙**：詳細步驟、具體方法、完整說明、處理方式如下、以下是
-- **教學性詞彙**：範例、示例、教學、指導、建議、推薦、解決方案
-- **邏輯性詞彙**：首先、其次、然後、最後、接下來、另外
-- **結構化特徵**：編號列表(1.2.3.)、步驟分解、流程說明、項目符號(*•-)
-- **具體資訊**：期限、有效期、發生日、個月、時間、折算、薪資、具體數字
+點擊「KPI摘要」按鈕可查看完整的週間關鍵績效指標，所有數據基於 AI 智能分析：
 
-#### 低品質回答指標：
-- **無資訊表達**：沒有.*資訊、目前沒有、沒有相關、無法直接找到、並沒有被提及
-- **推託性詞彙**：建議您直接聯繫、請聯繫、請諮詢、建議聯繫、進一步諮詢
-- **道歉性詞彙**：抱歉、很抱歉、不好意思、無法、不能、不清楚、不確定
-- **不確定性詞彙**：可能、或許、也許、暫時無法、資訊不足
+### 核心指標表格
 
-### 問答配對機制
-系統會自動配對用戶問題與對應的GPT回答，並進行主題相關性檢測：
-1. **優先使用chatId配對**：相同chatId的User和Gpt記錄自動配對
-2. **時間窗口配對**：對於無chatId的記錄，在1分鐘時間窗口內尋找對應回答
-3. **用戶ID匹配**：確保問答來自同一用戶
-4. **順序邏輯**：按時間順序處理，避免錯誤配對
-5. **主題相關性檢測**：分析用戶問題關鍵詞（如特休、喪假、婚假等）與GPT回答內容的相關性，檢測答非所問的情況
+| 指標類別 | 指標名稱 | 說明 | 計算邏輯 |
+|---------|---------|------|---------|
+| 📅 **時間範圍** | 週起/週終 | 當前統計週的起始與結束日期 | 週一至週五（工作日） |
+| 👥 **使用者活躍度** | 日活平均 DAU (avg) | 本週平均每日活躍用戶數 | 週間每日唯一用戶數平均值 |
+| 👥 **使用者活躍度** | 週活 WAU | 本週活躍用戶總數 | 週間所有唯一用戶數（去重） |
+| 📈 **查詢量分析** | 本週查詢總數 | 本週所有用戶查詢次數統計 | User + GPT 記錄總和 |
+| ⏰ **時段分析** | 高峰時段 | 查詢量最高的小時時段 | 24小時中查詢數最多的時段 |
+| ⏰ **時段分析** | 高峰時段查詢數 | 高峰時段的具體查詢數量 | 該時段的查詢總數 |
+| 📊 **使用深度** | 每用戶平均查詢 | 平均每位用戶的查詢次數 | 總查詢數 ÷ 唯一用戶數 |
+| 🎯 **品質指標** | 解決率 | AI 評估的問題解決比例 | (完全解決+部分解決) ÷ 總評估數 |
+| 📈 **品質指標** | 平均回答正確率 | AI 評估的回答準確度 | 所有正確率評估的平均值 |
+| 🔄 **效率指標** | 平均解決嘗試次數 | 解決問題的平均對話輪次 | 解決問題所需的平均嘗試次數 |
+| ⚠️ **待改進指標** | 未解決數量 | 未能解決的查詢數量 | AI 評估為「否」的問題數 |
+| 🆕 **用戶成長** | 本週新用戶 | 首次使用平台的新用戶 | 本週首次出現的用戶 ID |
+| 🔄 **用戶留存** | 本週回訪用戶 | 之前使用過的回訪用戶 | 非首次使用的用戶數量 |
 
-## 統計規則
-- 以 anchor `a.textChat-icon.icon` 上的 `data-userid`, `data-gptid`, `data-time` 為準。
-- `data-time` 取日期部分 (YYYY-MM-DD) 作為分組 key。
-- 每天以 Set 方式去重 userId，得到每日唯一人次。
-- KPI 統計自動以當前週（週一至週五）為範圍進行計算。
+### AI 驅動的品質分析
+- 🧠 **智能評估**：每個問答對都經過專業 LLM 評估
+- 📊 **量化指標**：解決率與正確率提供客觀的服務品質衡量
+- 🎯 **改進方向**：未解決問題數量指出需要改進的領域
+- 📈 **趨勢追蹤**：支援週間與自訂時間範圍的 KPI 比較
 
-## 可能差異
-- 若頁面結構有改動（無 `data-*` 或不同的表格結構），腳本會退回以表格欄位猜測，但結果可能不完整；請回報以便調整選擇器。
-- 解決率和回答正確率基於GPT回答內容的關鍵詞分析，可能與實際用戶滿意度有差異。
-- 問答配對基於時間順序和用戶ID，如果對話記錄不完整可能影響配對準確性。
-- GPT回答品質評估僅供參考，實際回答效果需要結合具體的用戶回饋數據。
+## 📋 四大核心表格功能
 
-## 權限說明
-- 僅使用 content_scripts 注入需要的頁面，不需背景權限。
-- `host_permissions` 僅包含目標網域，以便在分頁聚合時以 fetch 取回其他頁。
+### 🔵 KPI摘要表格
+- **用途**：提供週間關鍵績效指標的總覽
+- **內容**：13項核心 KPI 指標，含時間範圍、使用者活躍度、品質評估等
+- **特色**：基於 AI 評估的量化品質分析
+- **適用對象**：管理層、專案經理、品質稽核人員
+
+### 🔵 每日統計表格  
+- **用途**：展示每日唯一使用者數量變化趨勢
+- **內容**：日期、唯一使用者數、查詢總數、解決問題數等
+- **特色**：支援跨日期比較，識別使用趨勢
+- **適用對象**：營運分析師、產品經理
+
+### 🔵 時段分析表格
+- **用途**：分析 24 小時使用者活躍度分佈
+- **內容**：每小時查詢數量、用戶分佈、高峰時段識別
+- **特色**：熱力圖式呈現，直觀顯示使用習慣
+- **適用對象**：系統管理員、客服排班規劃
+
+### 🔵 詳細log表格
+- **用途**：提供完整的使用記錄與 AI 評估結果
+- **內容**：使用者ID、時間戳記、問題內容、GPT回答、AI評估結果
+- **特色**：
+  - 🧠 即時 LLM 品質評估
+  - 🎯 解決狀態標示（是/否/部分/未知）
+  - 📊 正確率百分比顯示
+  - 🔗 智能問答配對
+- **適用對象**：品質稽核、客服訓練、問題分析
+
+### 表格切換與操作
+- **單一顯示**：一次僅顯示一個表格，保持介面簡潔
+- **按鈕切換**：點擊對應按鈕即可切換表格檢視
+- **狀態記憶**：系統會記住上次選擇的表格類型
+- **響應式設計**：所有表格都支援不同螢幕尺寸自適應
+
+## 🧠 AI 智能分析系統
+
+### 外部 LLM 評估引擎
+系統整合專業的客服品質稽核 AI，透過外部 ngrok 服務提供精確的 GPT 回答品質評估：
+
+#### 🎯 評估架構
+- **API 端點**：`https://blowfish-absolute-absolutely.ngrok-free.app/api/generate`
+- **評估模型**：`gpt-oss:20b` （可自訂）
+- **處理方式**：背景 Service Worker 避免 CORS 限制
+- **快取機制**：相同問答組合避免重複評估
+
+#### 📊 解決狀態評估標準
+- **是**：用戶問題完全得到解答，提供明確可行的解決方案
+- **部分**：回答涉及問題核心但不完整，或僅解決部分子問題  
+- **否**：完全未回應問題要點，或回答與問題無關
+- **未知**：問題過於模糊或回答無法判斷是否解決問題
+
+#### 📈 回答正確率評估（0-100%）
+- **90-100%**：資訊完全正確，無誤導內容
+- **70-89%**：大部分正確，有輕微不準確
+- **50-69%**：部分正確但存在明顯錯誤
+- **30-49%**：錯誤較多但有部分有用資訊
+- **0-29%**：大部分或完全錯誤
+
+### 🔗 智能問答配對機制
+系統採用多重策略自動配對用戶問題與 GPT 回答：
+
+#### 配對策略優先順序
+1. **ChatID 精確配對**：相同 chatId 的 User 和 Gpt 記錄自動配對
+2. **時間窗口配對**：1分鐘內的問答時間窗口匹配
+3. **用戶ID驗證**：確保問答來自同一用戶
+4. **順序邏輯處理**：按時間先後順序避免錯誤配對
+5. **主題相關性檢測**：分析問題與回答的主題相關性
+
+### ⚡ 即時評估與快取優化
+
+#### 非同步處理機制
+- **背景評估**：LLM 評估在背景進行，不影響主要統計功能
+- **漸進式載入**：評估結果即時更新至詳細 log 表格
+- **錯誤容錯**：評估失敗時自動回退至預設值（未知/0%）
+- **使用者友好**：評估過程對使用者完全透明
+
+#### 智能快取系統
+- **問答雜湊**：基於問題與回答內容產生唯一快取鍵值
+- **記憶體快取**：避免頁面重新整理時重複評估
+- **效能優化**：大幅減少 API 呼叫次數
+- **一致性保證**：相同問答組合保證評估結果一致
+
+### 🔧 技術架構特色
+
+#### Manifest V3 相容
+- **Service Worker**：採用最新的背景服務架構
+- **權限最小化**：僅申請必要的網域與儲存權限  
+- **安全性強化**：所有外部 API 呼叫經過安全驗證
+- **效能優化**：減少記憶體使用與 CPU 負載
+
+#### 跨域請求處理
+- **CORS 解決方案**：透過 background.js 統一處理外部 API
+- **錯誤處理**：完整的網路錯誤與逾時處理機制
+- **重試邏輯**：網路異常時的自動重試機制
+- **降級策略**：API 不可用時的功能降級處理
+
+## 📋 統計規則與資料來源
+
+### 資料擷取規則
+- **主要資料源**：錨點元素 `a.textChat-icon.icon` 的 `data-*` 屬性
+  - `data-userid`：使用者 ID
+  - `data-gptid`：GPT 服務 ID  
+  - `data-time`：時間戳記（UTC 格式）
+- **時區處理**：自動轉換 UTC 時間為 GMT+8 本地時間
+- **日期分組**：以 `YYYY-MM-DD` 格式作為分組鍵值
+- **去重機制**：每日使用 Set 資料結構對 userId 去重
+
+### 統計週期設定
+- **預設範圍**：當前週（週一至週五）
+- **自訂範圍**：支援指定起始與結束日期
+- **範圍儲存**：自訂範圍會保存至瀏覽器本地儲存
+- **智能週計算**：自動偵測週一作為週起始日
+
+### 排除清單機制
+系統自動排除以下測試與相關帳號，確保統計準確性：
+- **實習生帳號**：yalkyao, chenxi, yingzhiw, yutachen, yziang
+- **PM 成員**：yuyuanwang, dorislin920, emmalai  
+- **高度相關人員**：oscarchiu, richen, allenchen0411, yangjo, nancyw, iiskkchi, jackch
+
+## ⚠️ 注意事項與限制
+
+### 資料準確性
+- **頁面結構依賴**：若目標網站更改 HTML 結構或 `data-*` 屬性，可能影響資料擷取準確性
+- **備用擷取方案**：當 `data-*` 不可用時，會嘗試從表格欄位推測，但準確性較低
+- **時區假設**：系統假設伺服器時間為 UTC，客戶端為 GMT+8
+
+### AI 評估限制
+- **網路依賴**：LLM 評估需要穩定的網路連線至外部服務
+- **評估主觀性**：AI 評估結果僅供參考，可能與實際用戶滿意度有差異
+- **配對準確性**：問答配對基於時間與 ID 匹配，對話記錄不完整可能影響準確性
+- **API 可用性**：外部 LLM 服務不可用時會回退至預設評估值
+
+### 效能考量
+- **記憶體使用**：大量資料聚合時可能占用較多瀏覽器記憶體
+- **API 呼叫頻率**：LLM 評估會產生外部 API 請求，請注意服務用量限制
+- **快取策略**：雖有快取機制，但首次載入大量資料仍需時間處理
+
+## 🔐 權限與安全性說明
+
+### 擴充功能權限
+- **content_scripts**：注入目標網站頁面進行資料分析
+- **storage**：儲存使用者設定與面板位置  
+- **host_permissions**：
+  - `https://misbot-beta.mitac.com.tw/*`：存取目標統計網站
+  - `https://blowfish-absolute-absolutely.ngrok-free.app/*`：外部 LLM 評估服務
+  - `http://localhost/*`, `http://127.0.0.1/*`：本地開發測試
+
+### 資料隱私
+- **本地處理**：所有統計計算均在使用者瀏覽器本地進行
+- **無資料回傳**：不會將使用者資料傳送至第三方（除 LLM 評估服務外）
+- **最小化原則**：僅收集統計必要的匿名化資料
+- **透明化**：所有資料處理邏輯開放原始碼檢視
+
+## 🛠️ 常見問題與故障排除
+
+### 安裝相關問題
+
+**Q: 擴充功能安裝後沒有出現統計面板？**
+- ✅ 確認已開啟目標網站：`https://misbot-beta.mitac.com.tw/pms/platformAnalysis/UserChat*`
+- ✅ 檢查瀏覽器是否已啟用開發人員模式
+- ✅ 嘗試重新整理頁面或重新載入擴充功能
+- ✅ 查看瀏覽器控制台是否有錯誤訊息
+
+**Q: 面板顯示但功能無法正常運作？**
+- ✅ 檢查網路連線是否正常
+- ✅ 確認目標網站的頁面結構未發生變更
+- ✅ 嘗試清除瀏覽器快取後重新載入
+
+### 資料分析問題
+
+**Q: 統計數據似乎不正確？**
+- ✅ 確認頁面已完全載入所有聊天記錄
+- ✅ 使用「聚合全頁」功能獲取完整資料
+- ✅ 檢查日期範圍設定是否正確
+- ✅ 注意排除清單可能影響最終統計結果
+
+**Q: AI 評估結果一直顯示「未知/0%」？**
+- ✅ 檢查網路連線至外部 LLM 服務
+- ✅ 確認 ngrok 服務端點是否可正常存取
+- ✅ 等待背景評估完成（可能需要數分鐘）
+- ✅ 查看瀏覽器網路標籤是否有 API 錯誤
+
+### 效能相關問題
+
+**Q: 聚合大量資料時瀏覽器變慢？**
+- ✅ 建議分批處理大量資料
+- ✅ 關閉其他不必要的瀏覽器分頁
+- ✅ 考慮使用較小的日期範圍
+- ✅ 等待處理完成後再進行其他操作
+
+**Q: CSV 匯出失敗或檔案損壞？**
+- ✅ 確保瀏覽器允許檔案下載
+- ✅ 檢查磁碟空間是否充足
+- ✅ 嘗試使用較小的資料集進行匯出
+- ✅ 使用不同的檔案名稱重新匯出
+
+### 使用技巧
+
+**Q: 如何獲得最準確的統計結果？**
+- 💡 建議使用「聚合全頁」功能獲取完整資料
+- 💡 設定適當的日期範圍避免資料過於龐大
+- 💡 等待 AI 評估完成後再匯出報告
+- 💡 定期備份重要的統計資料
+
+**Q: 如何解讀 AI 評估結果？**
+- 💡 「是」表示問題完全解決，「部分」表示部分解決
+- 💡 正確率 90% 以上為優秀回答，70% 以上為良好回答
+- 💡 關注未解決問題的模式，找出改進方向
+- 💡 結合實際使用者回饋驗證評估結果
+
+## 📞 技術支援
+
+如遇到本文件未涵蓋的問題，請：
+1. 📋 詳細記錄錯誤訊息與重現步驟
+2. 🖼️ 提供相關的螢幕截圖
+3. 💻 檢查瀏覽器控制台的錯誤日誌
+4. 📧 聯繫開發團隊進行技術支援
+
+---
+
+**版本資訊**：v0.2.0 | **最後更新**：2025-09-09 | **相容性**：Chrome 88+, Edge 88+
