--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,37 @@
 # 變更日誌
 
+## 2025-09-09 - 外部 LLM 評估系統整合
+
+### 重大功能更新
+- 🚀 **全新 LLM 評估系統**：整合外部 ngrok LLM 服務，提供專業級 GPT 回答品質評估
+- 🧠 **智能化評估替代**：移除舊有的關鍵詞評估系統，改用專業 AI 稽核評估
+- ⚡ **Service Worker 架構**：採用 Manifest V3 背景服務，避免 CORS 限制
+- 🎯 **精確評估標準**：問題解決狀態（是/否/部分/未知）+ 回答正確率（0-100%）
+
+### 技術架構改進
+- 📡 **外部 API 整合**：串接 `https://blowfish-absolute-absolutely.ngrok-free.app/api/generate`
+- 💾 **智能快取系統**：避免相同問答重複評估，提升效能
+- 🔄 **非同步處理**：LLM 評估採用非同步載入，不影響主要功能
+- 🛡️ **錯誤處理機制**：評估失敗時自動回退至預設值
+
+### 評估品質提升
+- 📊 **專業稽核標準**：採用客服品質稽核 AI 的專業評估邏輯
+- 🎯 **四級解決狀態**：是（完全解決）、部分（部分解決）、否（未解決）、未知（無法判斷）
+- 📈 **精確正確率**：0-100% 數值化評估，更精準反映回答品質
+- 🔍 **上下文分析**：同時分析用戶問題與 GPT 回答的關聯性
+
+### 使用者體驗優化
+- ⏰ **即時更新**：評估結果即時顯示在詳細 log 表格中
+- 💡 **視覺化呈現**：解決狀態與正確率以直觀方式呈現
+- 🔄 **背景處理**：評估過程在背景進行，不影響其他操作
+- 📱 **響應式設計**：評估結果適配所有螢幕尺寸
+
+### 檔案異動
+- `extension/background.js` - 全新建立，LLM API 整合
+- `extension/content.js` - 移除關鍵詞評估，整合 LLM 評估
+- `extension/manifest.json` - 更新權限，支援外部 API 呼叫
+- `extension/styles.css` - 優化評估結果顯示樣式
+
 ## 2025-09-04 - 按鈕顯示修正
 
 ### 修正問題
@@ -57,3 +89,39 @@
 - `extension/content.js` - 主要邏輯更新
 - `extension/styles.css` - 按鈕樣式改進
 - `extension/manifest.json` - 無異動
+
+## 2025-08-28 - 核心功能建立
+
+### 初始版本功能
+- 📊 **基礎統計功能**：每日唯一使用人數統計
+- 📈 **KPI 摘要系統**：週間關鍵績效指標計算
+- 🔄 **多頁聚合**：支援跨頁面數據聚合
+- 💾 **CSV 匯出**：完整的數據匯出功能
+- 🎨 **浮動面板設計**：右下角統計面板，支援拖拽移動
+- 📱 **響應式設計**：適配不同螢幕尺寸
+
+### 統計功能
+- 📊 每日唯一使用人次統計（去重處理）
+- ⏰ 24小時使用時段分佈分析
+- 📈 週活躍用戶數 (WAU) 計算
+- 📊 日活平均用戶數 (DAU) 統計
+- 🎯 高峰時段識別與統計
+
+### 品質評估系統 (v1.0)
+- 🔍 **關鍵詞評估系統**：基於內容關鍵詞分析回答品質
+- ✅ **解決狀態判斷**：是/否/部分/未知四級評估
+- 📈 **回答正確率**：0-100% 評估標準
+- 🔗 **問答配對機制**：智能配對用戶問題與GPT回答
+- 📊 **品質指標統計**：解決率、平均正確率等KPI計算
+
+### 技術特色
+- 🎯 **排除名單機制**：自動排除測試帳號和相關人員
+- 🗓️ **智能日期處理**：自動週間範圍計算（週一至週五）
+- 💾 **本地儲存**：支援自訂日期範圍儲存
+- 🎨 **面板拖拽**：可拖拽移動的浮動面板
+- 📊 **多表格切換**：KPI摘要、每日統計、時段分析、詳細log
+
+### 檔案結構
+- `extension/content.js` - 主要邏輯與統計算法
+- `extension/styles.css` - 面板樣式與響應式設計
+- `extension/manifest.json` - 擴充功能配置
