更新 CHANGELOG 和 README，新增已知差異與限制說明，調整 KPI 計算邏輯以精確反映未解決查詢數

--- a/README
+++ b/README
@@ -18,7 +18,7 @@
 
 ### 💾 數據匯出
 - **完整 CSV 匯出**：包含 KPI 摘要、每日統計、時段分析、詳細 log 四大表格
-- **PM 專用範本**：針對項目管理需求的專門匯出格式
+- **PM 專用範本**：針對項目管理需求的專門匯出格式（目前提供函式 `exportPmTemplateCSV`，尚未在 UI 露出）
 - **自訂日期範圍**：支援指定時間範圍的數據分析
 
 ### 🎨 使用者介面
@@ -26,6 +26,8 @@
 - **多表格切換**：四種不同視圖的智能切換
 - **響應式設計**：適配各種螢幕尺寸與解析度
 - **現代化 UI**：採用漸層色彩與動畫效果
+
+提示：PM 專用範本目前未在面板按鈕露出。如需使用，可於 Console 呼叫 `exportPmTemplateCSV()`（後續版本將加入按鈕）。
 
 ## 📋 安裝與使用
 
@@ -68,11 +70,12 @@
 | 👥 **使用者活躍度** | 日活平均 DAU (avg) | 本週平均每日活躍用戶數 | 週間每日唯一用戶數平均值 |
 | 👥 **使用者活躍度** | 週活 WAU | 本週活躍用戶總數 | 週間所有唯一用戶數（去重） |
 | 📈 **查詢量分析** | 本週查詢總數 | 本週所有用戶查詢次數統計 | User + GPT 記錄總和 |
+| 📈 **查詢量分析（修正）** | 本週查詢總數 | 以使用者提問（問答對）數量統計 | 每筆 User 提問配對為 1 筆（不累加 GPT 行數） |
 | ⏰ **時段分析** | 高峰時段 | 查詢量最高的小時時段 | 24小時中查詢數最多的時段 |
 | ⏰ **時段分析** | 高峰時段查詢數 | 高峰時段的具體查詢數量 | 該時段的查詢總數 |
 | 📊 **使用深度** | 每用戶平均查詢 | 平均每位用戶的查詢次數 | 總查詢數 ÷ 唯一用戶數 |
 | 🎯 **品質指標** | 解決率 | AI 評估的問題解決比例 | (完全解決+部分解決) ÷ 總評估數 |
-| 📈 **品質指標** | 平均回答正確率 | AI 評估的回答準確度 | 所有正確率評估的平均值 |
+| 📈 **品質指標（修正）** | 平均回答正確率 | AI 評估的回答準確度 | 以「總查詢數」為分母（未取得數值評估者不計入分子） |
 | 🔄 **效率指標** | 平均解決嘗試次數 | 解決問題的平均對話輪次 | 解決問題所需的平均嘗試次數 |
 | ⚠️ **待改進指標** | 未解決數量 | 未能解決的查詢數量 | AI 評估為「否」的問題數 |
 | 🆕 **用戶成長** | 本週新用戶 | 首次使用平台的新用戶 | 本週首次出現的用戶 ID |
@@ -148,11 +151,11 @@
 系統採用多重策略自動配對用戶問題與 GPT 回答：
 
 #### 配對策略優先順序
+（目前實作）
 1. **ChatID 精確配對**：相同 chatId 的 User 和 Gpt 記錄自動配對
-2. **時間窗口配對**：1分鐘內的問答時間窗口匹配
-3. **用戶ID驗證**：確保問答來自同一用戶
-4. **順序邏輯處理**：按時間先後順序避免錯誤配對
-5. **主題相關性檢測**：分析問題與回答的主題相關性
+2. **時間窗口配對**：在無 chatId 時，找出同一使用者 1 分鐘內最近的 GPT 回答
+3. **用戶ID限制**：配對時需為同一 userId
+4. **時間順序處理**：以時間先後避免跨輪誤配
 
 ### ⚡ 即時評估與快取優化
 
@@ -164,9 +167,9 @@
 
 #### 智能快取系統
 - **問答雜湊**：基於問題與回答內容產生唯一快取鍵值
-- **記憶體快取**：避免頁面重新整理時重複評估
+- **單頁記憶體快取**：於同一頁面生命週期內避免重複評估（重新整理後不保留）
 - **效能優化**：大幅減少 API 呼叫次數
-- **一致性保證**：相同問答組合保證評估結果一致
+- **一致性保證**：相同問答組合於同一頁面中結果一致
 
 ### 🔧 技術架構特色
 
@@ -178,9 +181,8 @@
 
 #### 跨域請求處理
 - **CORS 解決方案**：透過 background.js 統一處理外部 API
-- **錯誤處理**：完整的網路錯誤與逾時處理機制
-- **重試邏輯**：網路異常時的自動重試機制
-- **降級策略**：API 不可用時的功能降級處理
+- **錯誤處理**：擷取錯誤並回傳預設值（未知/0%）；目前未實作自動重試
+- **降級策略**：API 不可用時以預設值顯示，並保留後續重試的可能
 
 ## 📋 統計規則與資料來源
 
@@ -190,6 +192,7 @@
   - `data-gptid`：GPT 服務 ID  
   - `data-time`：時間戳記（UTC 格式）
 - **時區處理**：自動轉換 UTC 時間為 GMT+8 本地時間
+- **時間格式**：預設解析 `YYYY-MM-DD HH:mm:ss`（若來源帶有 `Z` 字尾可能無法解析，需調整來源或擴充解析器）
 - **日期分組**：以 `YYYY-MM-DD` 格式作為分組鍵值
 - **去重機制**：每日使用 Set 資料結構對 userId 去重
 
@@ -217,6 +220,15 @@
 - **評估主觀性**：AI 評估結果僅供參考，可能與實際用戶滿意度有差異
 - **配對準確性**：問答配對基於時間與 ID 匹配，對話記錄不完整可能影響準確性
 - **API 可用性**：外部 LLM 服務不可用時會回退至預設評估值
+
+### KPI 計算細節與限制
+- **解決率**：以（完全解決 + 0.5 × 部分解決）/ 總查詢數 計算
+- **平均正確率**：以「總查詢數」為分母；未產生數值評估（如尚在審核中）者不會貢獻分子，可能導致平均值偏低
+- **未回應情境**：無對應 GPT 回答者視為未解決並計入分母
+
+### 已知行為
+- **相同聊天中的多輪**：同一 chatId 下，最近的 GPT 回答可能被多個相近時間的 User 提問配對到（目前未做唯一配對耗盡策略）
+- **批次評估 API**：背景程式提供批次呼叫與進度回報，但目前 UI 端以逐筆評估為主，未啟用批次發送
 
 ### 效能考量
 - **記憶體使用**：大量資料聚合時可能占用較多瀏覽器記憶體
