--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,9 +10,9 @@
 
 ### 技術架構改進
 - 📡 **外部 API 整合**：串接 `https://blowfish-absolute-absolutely.ngrok-free.app/api/generate`
-- 💾 **智能快取系統**：避免相同問答重複評估，提升效能
-- 🔄 **非同步處理**：LLM 評估採用非同步載入，不影響主要功能
-- 🛡️ **錯誤處理機制**：評估失敗時自動回退至預設值
+- 💾 **智能快取系統**：單頁記憶體快取，避免同一頁面生命週期內的重複評估
+- 🔄 **非同步處理**：LLM 評估採用非同步載入，不影響主要功能；支援批次評估 API 與進度回報（目前 UI 未開啟）
+- 🛡️ **錯誤處理機制**：評估失敗時自動回退至預設值（未知/0%）
 
 ### 評估品質提升
 - 📊 **專業稽核標準**：採用客服品質稽核 AI 的專業評估邏輯
@@ -31,6 +31,13 @@
 - `extension/content.js` - 移除關鍵詞評估，整合 LLM 評估
 - `extension/manifest.json` - 更新權限，支援外部 API 呼叫
 - `extension/styles.css` - 優化評估結果顯示樣式
+
+### 已知差異與限制（相較於先前文件敘述）
+- 快取為「單頁記憶體」層級，重新整理頁面後不保留
+- KPI 的「本週查詢總數」以 User 提問數為基礎（問答對為 1 筆），不累加 GPT 行數
+- 平均正確率以總查詢數為分母，尚在審核或缺乏數值者不進入分子
+- 批次評估 API 與進度回報已在背景實作，但尚未在 UI 露出
+- PM 匯出範本函式 `exportPmTemplateCSV` 已存在，尚未在 UI 露出
 
 ## 2025-09-04 - 按鈕顯示修正
 
