更新 CHANGELOG 和 README，新增內部使用說明文件，強化文件結構與安全控制要求，澄清解決率計算方式，並調整相關指標與流程說明

--- a/README
+++ b/README
@@ -1,6 +1,25 @@
 # UserChat Daily Unique Users Counter
 
-這是一個專業的 Chrome/Edge (Manifest V3) 擴充功能，整合外部 LLM 服務進行智能分析。當你開啟 MIS Bot 平台的查詢頁面時，會在頁面右下角顯示統計面板，提供全面的用戶使用分析與 GPT 回答品質評估。
+這是一個專業的 Chrome/Edge (Manifest V3) 擴充功能，整合外部 LLM 服務進行智能分析。當你開啟 MIS Bot 平台的查詢頁面時，會在頁面右下角顯示統計面板，提供全面的用戶使用分析與 GPT 回答品質評估。本文檔於 2025-09-12 進行大幅更新：補強系統架構、資料流程、KPI 公式、CSV 欄位與開發維護資訊，並澄清「解決率」的加權計算方式。
+
+---
+## 📚 目錄
+1. [核心功能](#-核心功能)
+2. [安裝與使用](#-安裝與使用)
+3. [KPI 摘要功能](#-kpi-摘要功能)
+4. [四大核心表格功能](#-四大核心表格功能)
+5. [AI 智能分析系統](#-ai-智能分析系統)
+6. [統計規則與資料來源](#-統計規則與資料來源)
+7. [系統架構與資料流程](#-系統架構與資料流程)
+8. [KPI 精確計算公式](#-kpi-精確計算公式)
+9. [CSV 匯出格式說明](#-csv-匯出格式說明)
+10. [權限、安全與隱私](#-權限與安全性說明)
+11. [開發與偵錯指南](#-開發與偵錯指南)
+12. [常見問題與故障排除](#-常見問題與故障排除)
+13. [Roadmap](#-roadmap)
+14. [FAQ（進階）](#-faq進階)
+15. [版本資訊](#版本資訊)
+---
 
 ## 🚀 核心功能
 
@@ -74,12 +93,14 @@
 | ⏰ **時段分析** | 高峰時段 | 查詢量最高的小時時段 | 24小時中查詢數最多的時段 |
 | ⏰ **時段分析** | 高峰時段查詢數 | 高峰時段的具體查詢數量 | 該時段的查詢總數 |
 | 📊 **使用深度** | 每用戶平均查詢 | 平均每位用戶的查詢次數 | 總查詢數 ÷ 唯一用戶數 |
-| 🎯 **品質指標** | 解決率 | AI 評估的問題解決比例 | (完全解決+部分解決) ÷ 總評估數 |
+| 🎯 **品質指標** | 解決率* | AI 評估的問題解決比例 (加權) | (完全解決 + 0.5×部分解決) ÷ 已評估問答對數 |
 | 📈 **品質指標（修正）** | 平均回答正確率 | AI 評估的回答準確度 | 以「總查詢數」為分母（未取得數值評估者不計入分子） |
 | 🔄 **效率指標** | 平均解決嘗試次數 | 解決問題的平均對話輪次 | 解決問題所需的平均嘗試次數 |
 | ⚠️ **待改進指標** | 未解決數量 | 未能解決的查詢數量 | AI 評估為「否」的問題數 |
 | 🆕 **用戶成長** | 本週新用戶 | 首次使用平台的新用戶 | 本週首次出現的用戶 ID |
 | 🔄 **用戶留存** | 本週回訪用戶 | 之前使用過的回訪用戶 | 非首次使用的用戶數量 |
+
+> *加權解決率說明：為避免「部分解決」高估真實問題處理能力，系統以 0.5 權重計入，並且僅計入成功完成 LLM 評估之問答對。
 
 ### AI 驅動的品質分析
 - 🧠 **智能評估**：每個問答對都經過專業 LLM 評估
@@ -211,7 +232,7 @@
 ## ⚠️ 注意事項與限制
 
 ### 資料準確性
-- **頁面結構依賴**：若目標網站更改 HTML 結構或 `data-*` 屬性，可能影響資料擷取準確性
+- **頁面結構依賴**：若目標網站更改 HTML 結構或 `data-*` 導致擷取失敗需同步調整 parser
 - **備用擷取方案**：當 `data-*` 不可用時，會嘗試從表格欄位推測，但準確性較低
 - **時區假設**：系統假設伺服器時間為 UTC，客戶端為 GMT+8
 
@@ -222,9 +243,9 @@
 - **API 可用性**：外部 LLM 服務不可用時會回退至預設評估值
 
 ### KPI 計算細節與限制
-- **解決率**：以（完全解決 + 0.5 × 部分解決）/ 總查詢數 計算
-- **平均正確率**：以「總查詢數」為分母；未產生數值評估（如尚在審核中）者不會貢獻分子，可能導致平均值偏低
-- **未回應情境**：無對應 GPT 回答者視為未解決並計入分母
+- **解決率**：以（完全解決 + 0.5 × 部分解決）/ 已評估問答對數 計算
+- **平均正確率**：以「已評估問答對數」為分母；未產生數值評估（如尚在審核中）者不會貢獻分子，可能導致平均值保守
+- **未回應情境**：無對應 GPT 回答者視為未解決並計入未解決統計
 
 ### 已知行為
 - **相同聊天中的多輪**：同一 chatId 下，最近的 GPT 回答可能被多個相近時間的 User 提問配對到（目前未做唯一配對耗盡策略）
@@ -234,6 +255,108 @@
 - **記憶體使用**：大量資料聚合時可能占用較多瀏覽器記憶體
 - **API 呼叫頻率**：LLM 評估會產生外部 API 請求，請注意服務用量限制
 - **快取策略**：雖有快取機制，但首次載入大量資料仍需時間處理
+
+## 🏗️ 系統架構與資料流程
+
+### 模組構成（邏輯視圖）
+```
+┌──────────────────────┐      ┌──────────────────────┐
+│   Browser Tab (DOM)  │      │  Background Service  │
+│  (UserChat Page)     │      │    Worker (MV3)      │
+└─────────┬────────────┘      └─────────┬────────────┘
+          │ 1. DOM 擷取 (a.textChat-icon.icon)       │
+          ▼                                         │
+┌──────────────────────┐ 2. 標準化/過濾              │
+│   content.js         │────────────────────────────▶ fetch LLM API
+│  - Parser            │ 4. 生成 QA Queue            │
+│  - Aggregators       │◀──────────┐ 5. 評估結果回傳  │
+│  - UI Render         │           │ 6. in-memory 快取 │
+└─────────┬────────────┘           │                  │
+          │ 3. 建立 maps/sets      │                  │
+          ▼                        │                  │
+  Data Structures:                 │                  │
+  - dailyUserSetMap                │                  │
+  - hourlyBuckets                  │◀─────────────────┘
+  - qaPairs                        
+  - kpiSnapshot
+```
+
+### 資料生命週期步驟
+1. 擷取：掃描符合 selector 的錨點或行記錄
+2. 標準化：時間轉換、ID 過濾、排除清單應用
+3. 分類：依日期 (YYYY-MM-DD)、小時、userId 聚合
+4. 問答配對：依 chatId 或時間窗口配對形成 QA Pair
+5. 評估排程：將未評估 pair 放入背景訊息佇列
+6. LLM 呼叫：背景 worker 逐一或批次送出
+7. 回寫結果：content script 以 runtime message 更新
+8. KPI 重算：新評估結果進來時做增量更新
+9. 匯出：序列化目前記憶體統計為多 CSV
+
+### 關鍵資料結構摘要
+| 名稱 | 類型 | 作用 |
+|------|------|------|
+| dailyUserSetMap | Map<date, Set<userId>> | 計算每日唯一使用者 |
+| hourlyBuckets | Array[24] of {count, users:Set} | 時段分佈與峰值 |
+| qaPairs | Map<pairKey, {question, answer, status, accuracy,...}> | AI 評估與結果快取 |
+| kpiSnapshot | Object | 最新 KPI 指標快取 |
+
+## 📐 KPI 精確計算公式
+
+> 以下為實際使用的公式；若 UI 與文件有差異，以本節為準。
+
+| 指標 | 公式 (概念) | 備註 |
+|------|-------------|------|
+| WAU | unique(週內 userId) | 去重後使用者數 |
+| 平均 DAU | Σ dailyUnique / 工作日數 | 週一至週五或自訂範圍 |
+| 總查詢數 raw | User+GPT 行數 | 僅內部參考，不做 KPI 分母 |
+| 總查詢數 user | User 問題筆數 | 問答對上限；多輪仍逐筆計 |
+| 評估問答對數 | Count(完成配對且送評估) | evaluatedPairs |
+| 加權解決率 | (Full + 0.5×Partial)/evaluatedPairs | Partial 權重 0.5 |
+| 平均正確率 | Σ accuracy / evaluatedPairs | accuracy ∈ [0,100]；缺失不列入 Σ |
+| 未解決數 | Count(status==否) | 以 pair 為單位 |
+| 平均嘗試次數 | Σ(解決問題輪次)/解決問題數 | 輪次估算模型仍在優化 |
+| 每用戶平均查詢 | userQueries / uniqueUsers | 使用深度指標 |
+| 峰值時段 | argmax(hourly.count) | 同時回傳 count |
+
+註：未成功配對或尚未評估之問答不計入 evaluatedPairs；解決率與正確率不受多餘 GPT 行數影響。
+
+## 📄 CSV 匯出格式說明
+
+目前匯出為多檔（或後續可能打包）邏輯表：
+
+### 1. KPI Summary `kpi_summary.csv`
+| 欄位 | 說明 |
+|------|------|
+| week_start | 週期起始 (YYYY-MM-DD) |
+| week_end | 週期結束 |
+| dau_avg | 平均日活 |
+| wau | 週活 |
+| total_queries_raw | 原始 (User+GPT) 行數 |
+| total_queries_user | 使用者提問數 |
+| peak_hour | 峰值小時 (0-23) |
+| peak_hour_volume | 峰值查詢數 |
+| avg_query_per_user | 每用戶平均查詢 |
+| resolution_rate_weighted | 加權解決率 |
+| avg_accuracy | 平均正確率 |
+| avg_attempts_to_solve | 平均解決嘗試輪次 |
+| unresolved_count | 未解決問答對數 |
+| new_users | 新用戶數 |
+| returning_users | 回訪用戶數 |
+| generated_at | 產出時間 (ISO) |
+
+### 2. Daily Stats `daily_stats.csv`
+| date | unique_users | user_queries | total_queries_raw | solved_full | solved_partial | resolution_rate_weighted | avg_accuracy | unresolved |
+
+### 3. Hourly Distribution `hourly_distribution.csv`
+| hour | query_count | unique_users | percent_of_day |
+
+### 4. Detail Log `detail_log.csv`
+| index | date_time_local | user_id | chat_id | role | question | answer | resolved_status | accuracy_score | pair_key | eval_source | eval_latency_ms | error_flag |
+
+### 5. PM Template `pm_template.csv`
+尚未於 UI 露出；呼叫 `exportPmTemplateCSV()` 取得。
+
+> 若版本缺少部分欄位，表示功能仍在 Roadmap；請參考後續章節。
 
 ## 🔐 權限與安全性說明
 
@@ -250,6 +373,53 @@
 - **無資料回傳**：不會將使用者資料傳送至第三方（除 LLM 評估服務外）
 - **最小化原則**：僅收集統計必要的匿名化資料
 - **透明化**：所有資料處理邏輯開放原始碼檢視
+
+### 最小權限策略與建議
+未使用 cookies、tabs、scripting 等高敏感權限；後續若新增需在 CHANGELOG 明確揭露並進行安全審核。
+
+### 外部服務風險緩解建議
+1. 增加請求逾時 + 指數退避重試
+2. 對回傳 JSON 做 Schema 驗證
+3. 錯誤分類：網路 / 限流 / 內容格式
+4. 考慮壓縮批次請求降低頻寬
+
+## 🛠️ 開發與偵錯指南
+
+### 快速開始
+1. 以「載入未封裝項目」方式安裝 `extension/` 目錄
+2. 開啟目標頁面觀察右下角面板是否出現
+3. 修改 `content.js` 後於擴充功能頁重新載入，再重新整理目標頁面
+
+### Service Worker 偵錯
+Chrome: `chrome://extensions` → 尋找擴充 → 點「Service Worker」Inspect
+觀察：
+- LLM 請求發送與回傳
+- 是否出現 fetch/CORS 錯誤
+
+### Message 流程
+1. content.js 建立評估任務 → `runtime.sendMessage`
+2. background.js 呼叫外部 API
+3. background.js 回傳結果 payload
+4. content.js 更新 pair 狀態並觸發表格重新渲染
+
+### 常見開發陷阱
+| 問題 | 原因 | 解法 |
+|------|------|------|
+| 評估結果不更新 | 未註冊 onMessage | 確認 listener 在 top-level |
+| fetch 被攔截 | 網域未列於 host_permissions | 更新 manifest.json |
+| 面板拖曳失效 | 事件被子元素攔截 | 加 `user-select: none` 並阻止預設 |
+
+### 建議未來模組化（示意）
+```
+content/
+  parser.js
+  aggregator.js
+  qaMatching.js
+  uiPanel.js
+  exporter.js
+background/
+  evaluator.js
+```
 
 ## 🛠️ 常見問題與故障排除
 
@@ -297,25 +467,54 @@
 ### 使用技巧
 
 **Q: 如何獲得最準確的統計結果？**
-- 💡 建議使用「聚合全頁」功能獲取完整資料
+- 💡 使用「聚合全頁」獲取完整資料
 - 💡 設定適當的日期範圍避免資料過於龐大
 - 💡 等待 AI 評估完成後再匯出報告
-- 💡 定期備份重要的統計資料
+- 💡 定期備份重要統計資料
 
 **Q: 如何解讀 AI 評估結果？**
 - 💡 「是」表示問題完全解決，「部分」表示部分解決
-- 💡 正確率 90% 以上為優秀回答，70% 以上為良好回答
-- 💡 關注未解決問題的模式，找出改進方向
+- 💡 正確率 90% 以上為優秀，70% 以上為良好
+- 💡 注意未解決問題的模式，找出改進方向
 - 💡 結合實際使用者回饋驗證評估結果
 
-## 📞 技術支援
+## 🗺️ Roadmap
+| 狀態 | 項目 | 說明 |
+|------|------|------|
+| 進行中 | 批次評估 UI | 將背景批次佇列進度條可視化 |
+| 計畫中 | PM 匯出按鈕 | 將 `exportPmTemplateCSV` 露出於 UI |
+| 計畫中 | 雙語介面 | zh-TW / en-US 切換 |
+| 計畫中 | 問答配對策略 v2 | 限制一對一避免多重配對 |
+| 計畫中 | IndexedDB 快取 | 跨重新整理保留評估結果 |
+| 計畫中 | Schema 驗證 | 對 LLM 回傳格式進行 JSON schema 驗證 |
+| 評估中 | 模糊語意去重 | 合併重複提問統計 |
+| 評估中 | 指標趨勢比較 | 週對週 / 範圍對範圍差異 |
+| 評估中 | 自動異常提醒 | 解決率、正確率低於閾值告警 |
 
-如遇到本文件未涵蓋的問題，請：
-1. 📋 詳細記錄錯誤訊息與重現步驟
-2. 🖼️ 提供相關的螢幕截圖
-3. 💻 檢查瀏覽器控制台的錯誤日誌
-4. 📧 聯繫開發團隊進行技術支援
+## ❓ FAQ（進階）
+**Q: 為什麼加權解決率與初版說明不同？**  
+A: 初版未加權會高估「部分解決」，採 0.5 權重更符合服務實際價值。
+
+**Q: accuracy_score 缺失時如何處理？**  
+A: 不納入平均計算（避免拉低或抬高），仍計入評估基數保守呈現。
+
+**Q: 可以關閉 LLM 評估嗎？**  
+A: 目前無 UI；可在 background.js 中短路評估函式快速停用。
+
+**Q: 同一問題多次提問是否合併？**  
+A: 目前視為獨立；未來可能加入語意哈希做去重。
+
+**Q: 是否支援離線後自動重送？**  
+A: 尚未；計畫透過離線佇列 + IndexedDB 實作。
+
+**Q: 匯出欄位能客製嗎？**  
+A: 尚未；Roadmap 項目「自訂匯出欄位」。
+
+## 版本資訊
+**版本**：v0.2.0  
+**最後更新**：2025-09-12  
+**相容性**：Chrome 88+, Edge 88+  
+**授權**：內部使用（若需開源請補充 LICENSE）
 
 ---
-
-**版本資訊**：v0.2.0 | **最後更新**：2025-09-09 | **相容性**：Chrome 88+, Edge 88+
+若發現文件與實際行為不一致，提交 Issue / 內部單時請附：瀏覽器版本、截圖、Console 與 Network 日誌片段以加速定位。
