更新 README 和新增內部使用說明文件，強化系統架構、資料流程與 KPI 公式，澄清解決率計算方式，並調整相關指標與格式規範。

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,27 +1,33 @@
 # 變更日誌
 
-# 變更日誌
-
 ## 2025-09-12 - 文件與指標公式強化
 
 ### 新增 / 調整內容
-- 📝 **README 大幅重寫**：新增目錄、系統架構圖、資料生命週期、核心資料結構表、KPI 精確公式、CSV 欄位說明、Roadmap、進階 FAQ、開發與偵錯指南。
-- 🎯 **解決率公式澄清**：改為「(完全解決 + 0.5×部分解決) / 已評估問答對數」，避免部分解決高估績效（README 與 UI 說明已統一）。
-- 📊 **KPI 範圍界定**：明確區分 raw 總查詢(User+GPT) 與 user 問題筆數（作為問答對上限與部分分母）。
-- 📄 **CSV 格式規範**：定義五大匯出檔（含尚未露出的 PM Template）與欄位語意，為後續自動測試/驗證鋪路。
-- 🔐 **安全補充**：說明最小權限策略、外部 LLM 服務風險緩解建議（逾時、重試、Schema 驗證等）。
-- 🧠 **資料流程**：加入 from DOM → 配對 → 評估 → KPI 增量更新 → 匯出完整步驟與 ASCII 架構圖。
+- 📝 **README 大幅重寫**：新增目錄、系統架構圖、資料生命週期、核心資料結構表、KPI 區塊、CSV 欄位說明、Roadmap、進階 FAQ、開發與偵錯指南。
+- 🎯 **KPI 區塊改版**：不再直接宣稱最終公式已實作，改為「現況 vs 目標」矩陣，清楚標示尚未實作項（加權解決率、evaluatedPairs 分母、raw 行數、strict unresolved 等）。
+- 📊 **指標語意界定**：區分 user 問題筆數（目前分母）與規劃中 raw 總行數 (User+GPT)。
+- 📄 **CSV 格式規範**：定義五大匯出檔（含未露出的 PM Template）與欄位語意，為後續 Schema 驗證與自動測試鋪路。
+- 🔐 **安全補充**：最小權限策略與外部 LLM 服務風險緩解建議（逾時、重試、Schema 驗證等）。
+- 🧠 **資料流程**：加入 DOM 擷取 → 問答配對 → LLM 評估 → KPI 增量更新 → 匯出 的流程與 ASCII 架構圖。
 
 ### 澄清 / 修正
-- 修正文案中「平均回答正確率」分母應為已評估問答對數（舊描述提及總查詢數易混淆）。
-- 修正「解決率」計算方式說法不一致問題（舊文件未加權）。
-- 新增對「未回應情境」與「多輪多對一配對」的已知行為描述。
+- 原 README 中將加權解決率表述為既有行為，現改為標註「尚未實作」。
+- 平均正確率目前分母為「全部 user 問題」而非僅已完成評估問答對；文件已標示偏保守並列入 Roadmap。
+- 未解決數現行為「全部非完全解決」，未來將拆為 strict 與 extended 兩種。
+- 新增對「部分/未知/無回答」如何影響現行統計的說明，避免推導錯誤 KPI。
 
 ### 後續規劃（摘錄）
-- 批次評估 UI 可視化、PM 匯出按鈕、語意去重、IndexedDB 評估快取、Schema 驗證、指標趨勢比較、異常閾值告警。
+- 加權解決率 (Full + 0.5×Partial)
+- 分離 evaluatedPairs 分母
+- raw (User+GPT) 雙計數納入
+- unresolved_strict 與 unresolved_extended
+- Thread 聚合與語意去重
+- IndexedDB 評估快取
+- Schema 驗證腳本與自動化檢查
+- 指標趨勢比較與異常閾值告警
 
 ### 無程式碼改動
-本次僅文件與指標說明調整，未修改 `content.js` 或背景程式。
+本次僅文件與指標說明調整，`content.js` 現行計算邏輯未改。
 
 ## 2025-09-09 - 外部 LLM 評估系統整合
 
